[package]
name = "noter"
version = "0.1.0"
authors = ["Bernardo Chaves <bernardo.amc@gmail.com>"]
edition = "2018"
description = "Set reminders in Rust."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "2.0.2"
